Make sure images don't overlap.

--- a/app/assets/stylesheets/hackathons.scss
+++ b/app/assets/stylesheets/hackathons.scss
@@ -1,5 +1,6 @@
 .hackathon_cover_img {
-  max-width: 300px;
+  width: 300px;
+  max-width: 100%;
   display:block;
   margin: 0 auto;
   margin-bottom: 40px;
